[Tests] Add tests for tensor math extensions
C# extensions in TensorMathExt_*.cs files do not handle
sub windows properly.

--- a/src/Tests/Aardvark.Base.FSharp.Tests/Aardvark.Base.FSharp.Tests.fsproj
+++ b/src/Tests/Aardvark.Base.FSharp.Tests/Aardvark.Base.FSharp.Tests.fsproj
@@ -20,6 +20,7 @@
     <EmbeddedResource Include="data\test.jpg" />
     <Compile Include="TrafoTests.fs" />
     <Compile Include="TensorTests.fs" />
+    <Compile Include="TensorMathTests.fs" />
     <Compile Include="PixTests.fs" />
     <Compile Include="SVDTests.fs" />
     <Compile Include="CachesTest.fs" />
