Use struct representation for partial active patterns
See: https://learn.microsoft.com/en-us/dotnet/fsharp/language-reference/active-patterns#struct-representations-for-partial-active-patterns

--- a/src/Tests/Aardvark.Base.FSharp.Benchmarks/Aardvark.Base.FSharp.Benchmarks.fsproj
+++ b/src/Tests/Aardvark.Base.FSharp.Benchmarks/Aardvark.Base.FSharp.Benchmarks.fsproj
@@ -25,6 +25,7 @@
     <Compile Include="RangeSet.fs" />
     <None Include="Tuples_template.fs" />
     <Compile Include="Tuples_auto.fs" />
+    <Compile Include="ActivePatterns.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
