[Aardvark.Base.Tensors] Add utlities and basic math functions

--- a/src/Aardvark.Base.Tensors/Aardvark.Base.Tensors.fsproj
+++ b/src/Aardvark.Base.Tensors/Aardvark.Base.Tensors.fsproj
@@ -17,6 +17,9 @@
     <None Include="NativeTensorGenerator.fsx" />
     <Compile Include="NativeTensorGenerated.fs" />
     <Compile Include="NativeTensorExtensions.fs" />
+    <None Include="TensorUtilitiesGenerator.fsx" />
+    <Compile Include="TensorUtilitiesGenerated.fs" />
+    <Compile Include="TensorMath.fs" />
     <Compile Include="PixImageErrorMetric.fs" />
     <Compile Include="PixImageCube.fs" />
     <Compile Include="ImageTrafo.fs" />
