Fix tests and add as publish step

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,6 +28,8 @@ jobs:
       - name: Build
         shell: cmd
         run: dotnet build -c Release src\Aardvark.sln
+      - name: Test
+        run: dotnet test src\Aardvark.sln -c Release --no-build --logger:"console;verbosity=quiet"
       - name: Pack
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
