--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -20,5 +20,5 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         global-json-file: global.json
-    - name: build
+    - name: Build
       run: .\build.cmd
