--- a/src/Tests/Aardvark.Base.FSharp.Tests/Aardvark.Base.FSharp.Tests.fsproj
+++ b/src/Tests/Aardvark.Base.FSharp.Tests/Aardvark.Base.FSharp.Tests.fsproj
@@ -31,6 +31,7 @@
     <Compile Include="SortedSetExt.fs" />
     <Compile Include="MapExt.fs" />
     <Compile Include="OrderMaintenanceTrie.fs" />
+    <Compile Include="SizeOfTests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
