--- a/src/Tests/Aardvark.Base.FSharp.Tests/Aardvark.Base.FSharp.Tests.fsproj
+++ b/src/Tests/Aardvark.Base.FSharp.Tests/Aardvark.Base.FSharp.Tests.fsproj
@@ -18,20 +18,21 @@
   </PropertyGroup>
   <ItemGroup>
     <EmbeddedResource Include="data\test.jpg" />
+    <Compile Include="Math\MathTests.fs" />
+    <Compile Include="Math\TrafoTests.fs" />
+    <Compile Include="Math\SVDTests.fs" />
+    <Compile Include="Tensors\TensorTests.fs" />
+    <Compile Include="Tensors\TensorMathTests.fs" />
+    <Compile Include="Tensors\PixTests.fs" />
+    <Compile Include="Datastructures\RangeSetTests.fs" />
+    <Compile Include="Datastructures\SortedSetExt.fs" />
+    <Compile Include="Datastructures\MapExt.fs" />
+    <Compile Include="Datastructures\OrderMaintenanceTrie.fs" />
     <Compile Include="EnumTests.fs" />
-    <Compile Include="MathTests.fs" />
-    <Compile Include="TrafoTests.fs" />
-    <Compile Include="TensorTests.fs" />
-    <Compile Include="TensorMathTests.fs" />
-    <Compile Include="PixTests.fs" />
-    <Compile Include="SVDTests.fs" />
     <Compile Include="CachesTest.fs" />
     <Compile Include="PureAgTests.fs" />
     <Compile Include="NativeMemory.fs" />
     <Compile Include="ControlTests.fs" />
-    <Compile Include="SortedSetExt.fs" />
-    <Compile Include="MapExt.fs" />
-    <Compile Include="OrderMaintenanceTrie.fs" />
     <Compile Include="SizeOfTests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
