--- a/src/Tests/Aardvark.Base.FSharp.Benchmarks/Aardvark.Base.FSharp.Benchmarks.fsproj
+++ b/src/Tests/Aardvark.Base.FSharp.Benchmarks/Aardvark.Base.FSharp.Benchmarks.fsproj
@@ -27,6 +27,7 @@
     <Compile Include="ActivePatterns.fs" />
     <Compile Include="TensorUtilitiesBench.fs" />
     <Compile Include="TensorMathBench.fs" />
+    <Compile Include="DynamicDispatchBench.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
