--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,7 +26,7 @@ jobs:
         shell: cmd
         run: dotnet build -c Release src\Aardvark.sln
       - name: Test
-        run: dotnet test src\Aardvark.sln -c Release --no-build --logger:"console;verbosity=quiet"
+        run: dotnet test src\Aardvark.sln -c Release --no-build --nologo --logger:"console;verbosity=normal"
       - name: Pack
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
