--- a/src/Aardvark.Base.Tensors/Aardvark.Base.Tensors.fsproj
+++ b/src/Aardvark.Base.Tensors/Aardvark.Base.Tensors.fsproj
@@ -22,7 +22,7 @@
     <Compile Include="Extensions\TensorSlicing.fs" />
     <Compile Include="PixImage\ImageTrafo.fs" />
     <Compile Include="PixImage\PixImageErrorMetric.fs" />
-    <Compile Include="PixImage\PixImageCube.fs" />
+    <Compile Include="PixImage\PixCube.fs" />
     <Compile Include="Algorithms\QR.fs" />
     <Compile Include="Algorithms\SVD.fs" />
     <Compile Include="Algorithms\Solver.fs" />
