--- a/src/Tests/Aardvark.Base.FSharp.Tests/Aardvark.Base.FSharp.Tests.fsproj
+++ b/src/Tests/Aardvark.Base.FSharp.Tests/Aardvark.Base.FSharp.Tests.fsproj
@@ -34,6 +34,7 @@
     <Compile Include="NativeMemory.fs" />
     <Compile Include="ControlTests.fs" />
     <Compile Include="SizeOfTests.fs" />
+    <Compile Include="TypeMetaTests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
