added struct enumerator to ReferenceCountingSet + changed internal store to use struct tuples

--- a/src/Tests/Aardvark.Base.FSharp.Benchmarks/Aardvark.Base.FSharp.Benchmarks.fsproj
+++ b/src/Tests/Aardvark.Base.FSharp.Benchmarks/Aardvark.Base.FSharp.Benchmarks.fsproj
@@ -29,6 +29,7 @@
     <Compile Include="TensorMathBench.fs" />
     <Compile Include="DynamicDispatchBench.fs" />
     <Compile Include="TypePatternsBench.fs" />
+    <Compile Include="ReferenceCountingSetBench.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
