--- a/src/Tests/Aardvark.Base.FSharp.Tests/Aardvark.Base.FSharp.Tests.fsproj
+++ b/src/Tests/Aardvark.Base.FSharp.Tests/Aardvark.Base.FSharp.Tests.fsproj
@@ -37,6 +37,7 @@
     <Compile Include="SizeOfTests.fs" />
     <Compile Include="TypeMetaTests.fs" />
     <Compile Include="NullCoalesceTests.fs" />
+    <Compile Include="PinnedValueTests.fs" />
     <Compile Include="Program.fs" />
     <None Include="paket.references" />
   </ItemGroup>
