[FSharp] Add non-generic isNull and notNull

--- a/src/Tests/Aardvark.Base.FSharp.Benchmarks/Aardvark.Base.FSharp.Benchmarks.fsproj
+++ b/src/Tests/Aardvark.Base.FSharp.Benchmarks/Aardvark.Base.FSharp.Benchmarks.fsproj
@@ -30,6 +30,7 @@
     <Compile Include="DynamicDispatchBench.fs" />
     <Compile Include="TypePatternsBench.fs" />
     <Compile Include="ReferenceCountingSetBench.fs" />
+    <Compile Include="NullCheckBench.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
